--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# on DELL@home
 .DS_Store
 .gitignore
 .idea/codeStyles/Project.xml
@@ -26,13 +27,47 @@ namespace/bazel-testlogs
 thread/0_thread
 thread/1_thread
 thread/2_thread
+
+
+# on mac@mobvoi
+char_string/0_string
+char_string/1_string
+char_string/2_char
+char_string/3_string
 gperftools/0
+gperftools/1
+gperftools/1.dSYM/
+gperftools/aliyun/
+gperftools/my.pdf
+gperftools/my.prof
+gperftools/my.txt
 gperftools/test.pdf
-gperftools/test.txt
 gperftools/test.prof
+gperftools/test.txt
+io/0_cout
+io/0_fstream
+io/1_fstream
+io/2_fstream
+io/3.txt
+io/3_fstream
+io/4_fstream
+io/ReadFile
+io/a.txt
+io/b.txt
+io/c.txt
+io/tmp.txt
+lib_file/0_main_a
+lib_file/0_main_so
 lib_file/1_dynamicmath_test
 lib_file/1_staticmath_test
-lib_file/2_dependence_test
-lib_file/libdependence/add.o
-lib_file/libdependence/level_0.o
-lib_file/libdependence/level_1.o
+listener/
+thread/3_thread
+thread/3_thread_out.txt
+thread/4_thread
+thread/5_thread
+thread/5_thread_out.txt
+thread/6_future
+thread/7_future
+thread/8_future
+time/0_time
+.gitignore
